# MultiprocessorProgramming_exercise

./: README.md  common_opencl.c  common_opencl.h  depthmap64.asm  depthmap_amd.cl  depthmap_basic.cl  depthmap_c.c  depthmap_c.h  depthmap_opencl.c  depthmap_opencl.h  depthmap_opencl_amd.c  depthmap_opencl_amd.h  doubleTime.h  main.c
cmake/: CMakeLists.txt  Readme
